--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "homepage": "https://solana.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/solana-labs/solana-web3.js.git"
+    "url": "git+https://github.com/solana-labs/solana-web3.js.git"
   },
   "bugs": {
     "url": "http://github.com/solana-labs/solana-web3.js.git/issues"
@@ -153,5 +153,10 @@
     "start-server-and-test": "^1.12.0",
     "typescript": "^4.1.3",
     "watch": "^1.0.2"
+  },
+  "directories": {
+    "example": "examples",
+    "lib": "lib",
+    "test": "test"
   }
 }
