--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "@rollup/plugin-multi-entry": "^4.0.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@rollup/plugin-replace": "^2.3.4",
-    "@safecoin/spl-token": "^0.0.13",
+    "@solana/spl-token": "^0.0.13",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "babel-eslint": "^11.0.0-beta.2",
