--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "prepare": "run-s clean bpf-sdk:install bpf-sdk:remove-symlinks build",
     "pretty": "prettier --check '{,{examples,src,test}/**/}*.{j,t}s'",
     "pretty:fix": "prettier --write '{,{examples,src,test}/**/}*.{j,t}s'",
-    "re": "semantic-release --repository-url git@github.com:solana-labs/solana-web3.js.git",
+    "re": "semantic-release --repository-url git@github.com:Fair-Exchange/safecoin-web3.js.git",
     "test": "npm run build:fixtures && mocha './test/**/*.test.js'",
     "test:cover": "nyc --reporter=lcov mocha './test/**/*.test.js'",
     "test:browser": "TEST_LIVE=1 npm run build:fixtures && npm run build:browser-test && mocha-headless-chrome -f http://localhost:8080/mocha.html --timeout 180000",
